--- a/styles/Pasta.module.css
+++ b/styles/Pasta.module.css
@@ -13,6 +13,30 @@
   align-items: center;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr, 1fr;
+  grid-template-areas: 
+    "i i i i i i i i i c c c"
+    "d d d d d d d d d c c c";
+}
+
+.gridImage {
+  grid-area: i;
+  width: 100%;
+}
+
+.gridCheckout {
+  grid-area: c;
+  min-width: 100%;
+}
+
+.gridDescription {
+  grid-area: d;
+  width: 100%
+}
+
 .card {
   margin: 1rem 1rem;
   text-align: left;
@@ -22,20 +46,20 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   min-width: 280px;
-  max-width: 500px;
+  max-width: 700px;
   overflow: hidden;
   display: flexbox;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 400px;
+  height: auto;
   background: rgba( 255, 255, 255, 0.2 );
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur( 16px );
   -webkit-backdrop-filter: blur( 16px );
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
-  padding-top: 20px;
+  padding: 20px;
 }
 
 .cardImage {
