--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,5 @@
-.container {
-  /* padding: 0 2rem; */
-}
 
 .main {
-  /* padding: 4rem 0; */
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -18,6 +14,35 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+}
+
+.description {
+  margin: 15px; 
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.5;
+  font-size: 1.5rem;
+}
+
+.pasta-image {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 250px; 
+  height: 150px; 
+  margin: 0px; 
+  padding: 0px; 
+  overflow: hidden; 
+  box-shadow: 0 0 20px 5px #b8b8b8;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  justify-self:center
 }
 
 .footer a {
@@ -47,12 +72,6 @@
 .title,
 .description {
   text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
 }
 
 .code {
@@ -113,7 +132,6 @@
 }
 
 .card p {
-  margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
 }
@@ -141,11 +159,6 @@
 	animation: textfocusin 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
-.textpopuptop {
-	-webkit-animation: textpopuptop 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	animation: textpopuptop 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-
 @-webkit-keyframes textfocusin {
   0% {
     -webkit-filter: blur(12px);
@@ -168,22 +181,5 @@
     -webkit-filter: blur(0px);
     filter: blur(0px);
     opacity: 1;
-  }
-}
-
-@-webkit-keyframes textpopuptop {
-  0% {
-    text-shadow: none;
-  }
-  100% {
-    text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc, 0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc, 0 8px 0 #cccccc, 0 9px 0 #cccccc;
-  }
-}
-@keyframes textpopuptop {
-  0% {
-    text-shadow: none;
-  }
-  100% {
-    text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc, 0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc, 0 8px 0 #cccccc, 0 9px 0 #cccccc;
   }
 }
