--- a/styles/Pasta.module.css
+++ b/styles/Pasta.module.css
@@ -3,6 +3,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start; 
+  align-items: flex-start
 }
 
 .main {
@@ -11,7 +13,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+}
+
+.back-icon {
+  left: 0; 
+  top: 50%;
+  transform: translateY(-50%); 
+  position: absolute; 
+  padding: 5px 10px; 
+  border-radius: 5px; 
+  background-color: purple; 
+  color: white; 
+  cursor: pointer; 
+  font-size: 30px;
+  margin-left: 1rem;
 }
 
 .grid {
@@ -58,6 +74,15 @@
   padding-right: 15px;
 }
 
+.checkout-button {
+  text-align: center; 
+  background-color: purple; 
+  color: white; 
+  border-radius: 5px; 
+  margin: 7px; 
+  padding: 5px
+}
+
 .card {
   margin: 1rem 1rem;
   text-align: left;
@@ -81,6 +106,15 @@
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
   padding: 20px;
+  text-align: start; 
+  width: 65%
+}
+
+.card-title {
+  display: flex; 
+  margin: 0 1rem 1rem 1rem; 
+  width: 90%; 
+  justify-content: flex-start
 }
 
 .cardImage {
